--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jest": "^29.7.0",
     "mongodb": "^6.2.0",
@@ -10,7 +11,7 @@
     "husky": "^8.0.3"
   },
   "scripts": {
-    "test": "jest --passWithNoTests",
+    "test": "NODE_ENV=test jest --passWithNoTests",
     "prepare": "husky install"
   }
 }
