--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
   "scripts": {
     "test": "NODE_ENV=test jest --passWithNoTests",
     "prepare": "husky install",
-    "seed": "NODE_ENV=test node ./db/seeds/run-seed.js"
+    "seed": "MONGO_URL=mongodb://localhost:27017/test-database NODE_ENV=test node ./db/seeds/run-seed.js"
   }
 }
