--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
+    "axios": "^1.6.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jest": "^29.7.0",
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.0",
+    "node": "^21.1.0",
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
