--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.0",
     "node": "^21.1.0",
+    "node-cron": "^3.0.2",
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
