--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jest": "^29.7.0",
+    "jest-sorted": "^1.0.14",
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
     "husky": "^8.0.3"
   },
   "scripts": {
-    "test": "NODE_ENV=test jest --passWithNoTests",
+    "test": "MONGO_URL=mongodb://localhost:27017/test-database NODE_ENV=test jest ",
     "prepare": "husky install",
     "seed": "MONGO_URL=mongodb://localhost:27017/test-database NODE_ENV=test node ./db/seeds/run-seed.js"
   }
