--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "husky": "^8.0.3"
   },
   "scripts": {
-    "test": "MONGO_URL=mongodb://localhost:27017/test-database NODE_ENV=test jest ",
+    "test": "NODE_ENV=test jest ",
     "prepare": "husky install",
-    "seed": "MONGO_URL=mongodb://localhost:27017/test-database NODE_ENV=test node ./db/seeds/run-seed.js"
+    "seed": " node ./db/seeds/run-seed.js",
+    "seed-prod": "NODE_ENV=production npm run seed",
+    "start" : "node listen.js"
   }
 }
