--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "test": "NODE_ENV=test jest ",
     "prepare": "husky install",
-    "seed": " node ./db/seeds/run-seed.js",
+    "seed": "NODE_ENV=test node ./db/seeds/run-seed.js",
     "seed-prod": "NODE_ENV=production npm run seed",
     "start" : "node listen.js"
   }
